--- a/code/source/pom.xml
+++ b/code/source/pom.xml
@@ -19,12 +19,12 @@ under the License.
 --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-    <artifactId>code</artifactId>
-    <groupId>org.wcp.flink</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+    	<artifactId>code</artifactId>
+    	<groupId>org.wcp.flink</groupId>
+    	<version>1.0-SNAPSHOT</version>
+  	</parent>
 
-	<groupId>org.wcp</groupId>
+<!--	<groupId>org.wcp.flink</groupId>-->
 	<artifactId>source</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
