--- a/code/datastreamapi/source/pom.xml
+++ b/code/datastreamapi/source/pom.xml
@@ -105,6 +105,11 @@ under the License.
 <!--			<version>1.16.0</version>-->
 <!--			<scope>compile</scope>-->
 <!--		</dependency>-->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version>
+		</dependency>
 	</dependencies>
 
 	<build>
