--- a/code/datastreamapi/source/pom.xml
+++ b/code/datastreamapi/source/pom.xml
@@ -110,6 +110,18 @@ under the License.
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
 		</dependency>
+		<dependency>
+			<!-- 该依赖没用，用于查看代码 -->
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-connector-base</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
+		<dependency>
+			<!-- 该依赖没用，用于查看代码 -->
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-connector-files</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
